[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
ignore = E501, W606

[semantic_release]
version_variable = iso8601utils/__init__.py:__version__
upload_to_pypi = False
commit_parser = pygain_dev.commit_parser.parse_commit

[tool:pytest]
addopts = -q -rsfE --maxfail=5 --cov iso8601utils --cov-report term-missing --no-cov-on-fail
testpaths = test
python_functions = test it should must ensure
